# MyFirstDatascienceProject

./: .flake8  .gitignore  Makefile  README.md  app.py  base.ui  model.pkl  new.py  profile_dialog.ui  pyproject.toml  read_keyboard.py  requirements.txt  ru_eng_keycodes.py  todo.org  ui.py  ui_app.py
data/: processed.npy
experiments/catboost_model/: MLproject  train_catboost.py
experiments/sklearn_forest/: MLproject  python_env.yaml  train_forest.py
experiments/sklearn_gradient/: MLproject  train_gradient.py
experiments/sklearn_logreg/: MLproject  train_logreg.py
experiments/sklearn_svc/: MLproject  train_svc.py
experiments/train_pytorch/: MLproject  python_env.yaml  train_pytorch.py
experiments/xgboost/: MLproject  python_env.yaml
experiments/xgboost_model/: MLproject  train_xgboost.py
experiments/xgboost_train/: train_xgboost.py
model/keypoint_classifier/: keypoint_classifier.py
model/point_history_classifier/: point_history_classifier.py
notebooks/: PicsToCsv.ipynb  gesture_recognizer.ipynb  model_gesture.ipynb  process_video.ipynb  sklearn_test.ipynb  test_opencv.ipynb
process_keyboard/: keyboard_press.py  read_keyboard.py
process_mouse/: mouse.py  move_mouse.py
src/: args_parser.py  dialog.py  drawing.py  main_window.py  thread.py  ui.py
src/process_keyboard/: keyboard_press.py  read_keyboard.py
src/process_mouse/: mouse_enum.py  move_mouse.py
src/ui/: dialog.py  main_window_ui.py
train_pytorch/: train_pytorch.py
