[tool.poetry]
name = "myfirstdatascienceproject"
version = "0.1.0"
description = ""
authors = ["Roman Solomatin <36135455+Samoed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "^1.24.2"
mediapipe = "^0.9.1.0"
opencv-python = "^4.7.0.72"
tensorflow = "^2.11.0"
pynput = "^1.7.6"
python3-xlib = "^0.15"
pyside6 = "^6.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
