[tool.poetry]
name = "myfirstdatascienceproject"
version = "0.1.0"
description = ""
authors = ["Roman Solomatin <36135455+Samoed@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.24.2"
mediapipe = "^0.9.1.0"
opencv-python = "^4.7.0.72"
pynput = "^1.7.6"
pyside6 = "^6.4.3"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
torch = "^2.0.0"
mlflow = "^2.3.1"
tensorflow = "^2.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

